# pythonbox

./: .gitignore  GetJson.py  Makefile  README.md  Zazzercode.py  amazon-storage.py  arrays.py  claude.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: 06_fractals_julia_set.md  07_non_relativistic_schrodinger_equation.md  08_pulsating_rings_waves.md  README.md
modules/basic/: pyproject.toml
modules/basic/src/pythonbox_basic/: arrays.py  shutdown.py  task_scheduler.py
modules/core/: README.MD  pyproject.toml
modules/core/src/pythonbox_core/: HTTP_REST.py  RESTclient.py  Shipping.py
modules/files/: pyproject.toml
modules/files/src/pythonbox_files/: application.ini
modules/json/: pyproject.toml
modules/json/src/pythonbox_json/: README.md  ad_data.csv  csv_to_json.py  json_decoder_pickle.py  json_decoder_pickle_2.py  json_encoder_pickle.py  signals.json
modules/math/: pyproject.toml
modules/math/src/pythonbox_math/: Third_Order_Risk_Measure_Derivative.py  convergance.py  dirac_delta_animation.py  earnings.py  exp_divergence.py  gaussian_appearing.py  logistic_growth.py  maths.py  quartic_implicit_curve.py
modules/oo/: pyproject.toml
modules/physics/: pyproject.toml
modules/physics/src/pythonbox_physics/: aizawa_attractor.py  dirac_delta.py  einstein_relativity.py  free_wave_packet.py  free_wave_packet_visual.py  lorenz_attractor.py  lorenz_attractor_visual.py  non_relativistic_schrodinger_equation.py  nuclear_vibration.py  poincare_conjecture.py  pulsating_rings_title_splash_3d.py  pulsating_rings_waves.py  qualia_modality.py  relativistic_velocity_addition.py  ridge_wave_propagation.py  schwarzschild_lensing.py  schwarzschild_spacetime.py  single_pulsating_source_3d.py
modules/storage/: pyproject.toml
modules/storage/src/pythonbox_storage/: purge_storage.py  scan-buckets.py  write_to_dynamodb.py
src/main/python/: GetJson.py  InfectionsData.csv  README.MD  Shipping.py  amazon-storage.py  create_dynamodb_table.py  data_classes.py  deployment.py  task_scheduler.py  write_to_dynamodb.py
src/main/python/basic/: array_padding.py  celery_example.py  for_loop.py  sum.py
src/main/python/files/: config.py
(+31 files in other folders)
