[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonbox-core"
version = "0.1.0"
description = "HTTP, REST, and misc top-level demos"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
