[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonbox-math"
version = "0.1.0"
description = "Mathematical visualizations and numerical demos"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.6.0",
    "numpy>=1.23.0",
    "pillow>=9.0.0",
    "scipy>=1.9.0",
    "sympy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
