[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonbox-storage"
version = "0.1.0"
description = "AWS S3 and DynamoDB examples"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
